--- a/config.json
+++ b/config.json
@@ -1,6 +1,1 @@
-{
-  "name": "TPoS",
-  "short_description": "A shareable PoS terminal!",
-	"tile": "/tpos/static/image/tpos.png",
-  "contributors": ["talvasconcelos", "arcbtc", "leesalminen"]
-}
+{"name": "TPoS", "short_description": "A shareable PoS terminal!", "tile": "/tpos/static/image/tpos.png", "contributors": ["talvasconcelos", "arcbtc", "leesalminen"], "is_installed": true}
