--- a/config.json
+++ b/config.json
@@ -1,1 +1,7 @@
-{"name": "TPoS", "short_description": "A shareable PoS terminal!", "tile": "/tpos/static/image/tpos.png", "contributors": ["talvasconcelos", "arcbtc", "leesalminen"], "is_installed": true}
+{
+  "name": "TPoS",
+  "short_description": "A shareable PoS terminal!",
+  "tile": "/tpos/static/image/tpos.png",
+  "contributors": ["talvasconcelos", "arcbtc", "leesalminen"],
+  "is_installed": true
+}
