external_extension_path

--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "name": "TPoS",
   "short_description": "A shareable PoS terminal!",
 	"tile": "/tpos/static/image/tpos.png",
-  "contributors": ["talvasconcelos", "arcbtc", "leesalminen"]
+  "contributors": ["talvasconcelos", "arcbtc", "leesalminen"],
+  "min_lnbits_version": "0.XX.0"
 }
