--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "repos": [
-        {
-            "id": "tpos",
-            "organisation": "arcbtc",
-            "repository": "tpos"
-        }
-    ]
+  "repos": [
+    {
+      "id": "tpos",
+      "organisation": "lnbits",
+      "repository": "tpos"
+    }
+  ]
 }
