--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "repos": [
     {
       "id": "tpos",
-      "organisation": "lnbits",
+      "organisation": "arcbtc",
       "repository": "tpos"
     }
   ]
