--- a/config.json
+++ b/config.json
@@ -2,6 +2,26 @@
   "name": "TPoS",
   "short_description": "A shareable PoS terminal!",
   "tile": "/tpos/static/image/tpos.png",
-  "contributors": ["talvasconcelos", "arcbtc", "leesalminen"],
-  "min_lnbits_version": "0.12.6"
+  "min_lnbits_version": "0.12.6",
+  "contributors": [
+    {
+      "name": "Ben Arc",
+      "uri": "mailto:ben@lnbits.com",
+      "role": "Developer"
+    },
+    {
+      "name": "talvasconcelos",
+      "uri": "https://github.com/talvasconcelos",
+      "role": "Developer"
+    },
+    {
+      "name": "leesalminen",
+      "uri": "https://github.com/leesalminen",
+      "role": "Developer"
+    }
+  ],
+  "images": [],
+  "description_md": "https://raw.githubusercontent.com/lnbits/tpos/main/description.md",
+  "terms_and_conditions_md": "https://raw.githubusercontent.com/tpos/lnurldevice/main/toc.md",
+  "license": "MIT"
 }
