Added Yvette to config

--- a/config.json
+++ b/config.json
@@ -15,6 +15,11 @@
       "role": "Developer"
     },
     {
+      "name": "Yvette",
+      "uri": "https://github.com/arbadacarbaYK",
+      "role": "Contributor"
+    },
+    {
       "name": "leesalminen",
       "uri": "https://github.com/leesalminen",
       "role": "Developer"
@@ -35,6 +40,6 @@
     }
   ],
   "description_md": "https://raw.githubusercontent.com/lnbits/tpos/main/description.md",
-  "terms_and_conditions_md": "https://raw.githubusercontent.com/tpos/lnurldevice/main/toc.md",
+  "terms_and_conditions_md": "https://raw.githubusercontent.com/lnbits/tpos/main/toc.md",
   "license": "MIT"
 }
