--- a/config.json
+++ b/config.json
@@ -37,6 +37,10 @@
     },
     {
       "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/4.png"
+    },
+    {
+      "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/5.png",
+      "link": "https://www.youtube.com/embed/6yNBbDWf-RE?si=QvWaUf4sh24f0ksB"
     }
   ],
   "description_md": "https://raw.githubusercontent.com/lnbits/tpos/main/description.md",
