--- a/config.json
+++ b/config.json
@@ -27,6 +27,10 @@
   ],
   "images": [
     {
+      "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/1.jpg",
+      "link": "https://www.youtube.com/embed/-dg1BAzwSQw?si=U2QT9ncbIIuP5Jz1"
+    },
+    {
       "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/1.png"
     },
     {
@@ -37,10 +41,6 @@
     },
     {
       "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/4.png"
-    },
-    {
-      "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/5.png",
-      "link": "https://www.youtube.com/embed/6yNBbDWf-RE?si=QvWaUf4sh24f0ksB"
     }
   ],
   "description_md": "https://raw.githubusercontent.com/lnbits/tpos/main/description.md",
