Added config link for advanced description

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
     {
       "id": "tpos",
       "organisation": "lnbits",
-      "repository": "tpos"
+      "repository": "tpos",
+      "config": "https://raw.githubusercontent.com/lnbits/tpos/main/config.json"
     }
   ]
 }
