--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
+  "id": "tpos",
+  "version": "1.0.0",
   "name": "TPoS",
+  "repo": "https://github.com/lnbits/tpos",
   "short_description": "A shareable PoS terminal!",
   "tile": "/tpos/static/image/tpos.png",
   "min_lnbits_version": "1.0.0",
