--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Alan Bits <alan@lnbits.com>"]
 [tool.poetry.dependencies]
 python = "^3.10 | ^3.9"
 lnbits = {version = "*",  allow-prereleases = true}
+mypy = "^1.13.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
