--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["Alan Bits <alan@lnbits.com>"]
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
-lnbits = {version = "1.3.0-rc1", allow-prereleases = true}
+python = "~3.12 | ~3.11 | ~3.10"
+lnbits = {version = "*",  allow-prereleases = true}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
