--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,14 @@ authors = ["Alan Bits <alan@lnbits.com>"]
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10 | ^3.9"
-lnbits = {version = "*",  allow-prereleases = true}
-mypy = "^1.13.0"
+python = ">=3.10,<3.13"
+lnbits = {version = "1.3.0-rc1", allow-prereleases = true}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
 pytest-asyncio = "^0.21.0"
 pytest = "^7.3.2"
-mypy = "^1.5.1"
+mypy = "^1.13.0"
 pre-commit = "^3.2.2"
 ruff = "^0.3.2"
 
