add paid flag and tooltip

--- a/config.json
+++ b/config.json
@@ -48,5 +48,7 @@
   ],
   "description_md": "https://raw.githubusercontent.com/lnbits/tpos/main/description.md",
   "terms_and_conditions_md": "https://raw.githubusercontent.com/lnbits/tpos/main/toc.md",
-  "license": "MIT"
+  "license": "MIT",
+  "paid": false,
+  "paid_free_tooltip": "Free to use all the PoS features, apart from 0.5% charge for ATM withdraws to help maintain development."
 }
