corrected for free/paid

--- a/config.json
+++ b/config.json
@@ -49,6 +49,5 @@
   "description_md": "https://raw.githubusercontent.com/lnbits/tpos/main/description.md",
   "terms_and_conditions_md": "https://raw.githubusercontent.com/lnbits/tpos/main/toc.md",
   "license": "MIT",
-  "paid": "free/paid",
-  "paid_free_tooltip": "Free to use all the PoS features, apart from 0.5% charge for ATM withdraws to help maintain development."
+  "paid_features": "Free to use all the PoS features, apart from 0.5% charge for the ATM whithdraws to help maintain development."
 }
