--- a/config.json
+++ b/config.json
@@ -4,8 +4,9 @@
   "name": "TPoS",
   "repo": "https://github.com/lnbits/tpos",
   "short_description": "A shareable PoS terminal!",
+  "description": "",
   "tile": "/tpos/static/image/tpos.png",
-  "min_lnbits_version": "1.4.0",
+  "min_lnbits_version": "1.3.0",
   "contributors": [
     {
       "name": "Ben Arc",
@@ -30,8 +31,8 @@
   ],
   "images": [
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/1.jpg",
-      "link": "https://www.youtube.com/embed/-dg1BAzwSQw?si=U2QT9ncbIIuP5Jz1"
+      "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/TPoS_thumbnail.png",
+      "link": "https://www.youtube.com/watch?v=8w4-VQ3WFrk&t=1s"
     },
     {
       "uri": "https://raw.githubusercontent.com/lnbits/tpos/main/static/image/1.png"
@@ -49,5 +50,8 @@
   "description_md": "https://raw.githubusercontent.com/lnbits/tpos/main/description.md",
   "terms_and_conditions_md": "https://raw.githubusercontent.com/lnbits/tpos/main/toc.md",
   "license": "MIT",
-  "paid_features": "Free to use all the PoS features, apart from 0.5% charge for the ATM whithdraws to help maintain development."
+  "paid_features": "Free to use all the PoS features, apart from 0.5% charge for the ATM whithdraws to help maintain development.",
+  "tags": ["Merchant", "Point of Sale"],
+  "donate": "",
+  "hidden": false
 }
